Update 8.2 - Identify and apply security controls in software development ecosystems.md

--- a/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
+++ b/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
@@ -194,8 +194,69 @@ Resource management during runtime is also a major area of concern. A denial of 
 
 Let’s not forget about **runtime permissions**. Principle of least privilege must extend to code execution. If your web app only needs to read from a database, why should it be able to write or delete? If your runtime environment lets every script access the entire file system, you’ve handed attackers the keys. Runtime permission models should enforce strict boundaries. Think of Android apps—they declare permissions like access to camera, GPS, or contacts, and users can revoke them. Enterprise software should be no different.
 
+### Open Questions ###
 
+Why is the runtime phase considered the most critical point for application security in the software development lifecycle?
 
+<details> <summary>Show answer</summary> The runtime phase is where the application interacts with real systems, users, and unpredictable inputs, which is when vulnerabilities become exploitable. While code sitting in a repository poses no active threat, the moment it runs, it opens doors to attackers through exposed services, user interfaces, and system calls. </details>
+
+How does a buffer overflow occur at runtime, and what well-known vulnerability demonstrates this issue?
+
+<details> <summary>Show answer</summary> A buffer overflow happens when a program writes more data to a memory buffer than it can hold, potentially overwriting adjacent memory and allowing code execution. The Heartbleed vulnerability in OpenSSL is a classic example, where a lack of input validation caused sensitive memory to be leaked. </details>
+
+What is the primary difference between a Web Application Firewall (WAF) and Runtime Application Self-Protection (RASP) in the context of runtime security?
+
+<details> <summary>Show answer</summary> WAF operates externally, filtering web traffic based on rules and signatures, while RASP embeds itself within the application and observes its actual runtime behavior. RASP can make real-time decisions based on the app's state, blocking threats more intelligently than rule-based external systems. </details>
+
+How does the principle of least privilege apply to runtime environments, and what tools help enforce it?
+
+<details> <summary>Show answer</summary> Least privilege at runtime means applications and services should only have the minimum permissions necessary to perform their functions. Tools like SELinux, AppArmor, and container security profiles (e.g., seccomp) help enforce these boundaries by limiting what resources and actions a process can access. </details>
+
+What types of runtime conditions can reveal vulnerabilities that static analysis may not detect?
+
+<details> <summary>Show answer</summary> Runtime vulnerabilities often appear under specific conditions like malformed input, high concurrency, resource exhaustion, or system misconfigurations. These issues are difficult to spot in static analysis because they rely on live interactions, timing, or environmental factors that only emerge during execution. </details>
+
+---
+
+## 8.2.6 Continuous Integration and Continuous Delivery (CI/CD) ##
+
+Continuous Integration and Continuous Delivery (or Continuous Deployment) represents a foundational shift in how modern software is built, tested, and released. Understanding CI/CD isn't about becoming a DevOps engineer but about grasping how automation in these pipelines can either be a security enabler or a disaster multiplier. Let’s walk through it. Imagine the old world of software: teams wrote code for months, then threw it over the wall to operations. Deployment was a big bang event full of surprises, often on a Friday night, with rollback plans in case everything went sideways. CI/CD changed that by saying: what if we build, test, and deliver small changes continuously, using automation to reduce human error and speed up feedback? From a security point of view,as usual, this is a double-edged sword.
+
+:necktie: Automation allows fast, consistent enforcement of security policies, but it also means mistakes and malicious code can propagate just as fast if not checked carefully.
+
+**CI** stands for Continuous Integration, which focuses on developers frequently merging their code into a shared repository. Every change triggers an automated process that builds the software, runs unit tests, static analysis, and often some form of security scanning. The idea is to catch problems early when they are small and easier to fix. The key here is to understand how source control security, automated testing, and static code analysis work together to form a first line of defense. If an attacker gets access to a developer’s machine and commits malicious code, CI is where that code is built, and possibly where it's stopped—if there are good checks in place. If not, the malicious code may sail through to production. This is why protecting the CI environment, including the runners, agents, and credentials they use, is absolutely critical. These systems often have access to secrets, tokens, and deployment pipelines, making them high-value targets. Treat your CI server like production.
+
+**CD**, on the other hand, stands for Continuous Delivery or Continuous Deployment, depending on how automated the release process is. With Continuous Delivery, the software is always in a deployable state, but a human may still hit the release button. With Continuous Deployment, that button is pressed automatically, and every validated change gets shipped. From a security perspective, the deployment phase brings unique risks. For example, if the CD pipeline deploys directly to cloud environments using service credentials, those credentials need tight control. If an attacker gets into the CD pipeline, they might not just push malicious code—they might reconfigure infrastructure, exfiltrate secrets, or deploy malware. That’s why role-based access control (RBAC), secrets management, and logging become non-negotiable in CI/CD systems. You wouldn’t leave a root key lying around on a production server, and you shouldn’t leave hardcoded credentials in a pipeline YAML file either.
+
+CI/CD is also about culture. Security needs to shift left—that is, move earlier in the development process—and CI/CD makes this possible. Static application security testing (SAST), software composition analysis (SCA), and even container scanning can be part of the pipeline. This means that before a piece of code ever runs in production, it has been analyzed for vulnerabilities, checked for outdated libraries, and validated against policies. For example, if a developer tries to import a version of Log4j with a known CVE, the pipeline should stop the build and alert the team. This is a powerful way to automate policy enforcement, reduce exposure, and avoid security regression. It also builds security awareness into development itself, making it part of the workflow instead of an afterthought.
+
+Think of the CI/CD pipeline like an assembly line in a car factory. Each stage—building, testing, packaging, deploying—adds value or checks for defects. Now imagine someone sneaking a faulty brake system into one of the cars. If your quality control checks at each stage are weak or nonexistent, that defect makes it all the way to the customer. In CI/CD, the defects can be vulnerabilities, backdoors, misconfigurations, or even embedded malware. That’s why the CISSP needs to understand how to secure the supply chain, both internal and external. Open-source packages, third-party libraries, and container images can all become Trojan horses. Tools like SBOMs (Software Bill of Materials) and trusted registries help, but they must be integrated into the pipeline and reviewed continuously.
+
+Pipeline security also means thinking about infrastructure as code (IaC). Many deployments are defined in YAML, Terraform, or Helm charts. If someone misconfigures an S3 bucket to be public or forgets to turn off SSH access on a cloud instance, that becomes part of the deployment—and now your vulnerability is repeatable. For this reason, policy-as-code tools like Open Policy Agent (OPA) can be used to enforce configuration standards as part of the pipeline. You want security gates that are enforceable, visible, and explainable to both developers and auditors. 
+
+### Open Questions ###
+
+1. Why should a security professional treat a CI server as a high-value asset similar to a production system?
+
+<details> <summary>Show answer</summary> The CI server holds critical permissions, tokens, and the ability to trigger deployments. If compromised, it can become a backdoor into the organization’s production environment, allowing attackers to inject malicious code or manipulate build artifacts. That’s why it must be hardened, monitored, and treated as part of the trusted security perimeter. </details>
+
+2. What does “shifting security left” mean in the context of CI/CD, and how does it impact software security?
+
+<details> <summary>Show answer</summary> Shifting security left means embedding security checks earlier in the software development process. In CI/CD, this includes scanning code at commit time, performing static analysis in builds, and automatically rejecting insecure configurations before they reach production. It helps detect and fix vulnerabilities early, when it’s cheaper and safer to do so. </details>
+
+3. How does Software Composition Analysis (SCA) improve security in CI/CD pipelines?
+
+<details> <summary>Show answer</summary> Software Composition Analysis scans the software for third-party components and libraries, checking for known vulnerabilities and licensing issues. It helps prevent using outdated or insecure packages, reducing the risk of supply chain attacks or accidental inclusion of components like vulnerable versions of Log4j. </details>
+
+4. What is a critical risk associated with secrets in CI/CD pipelines, and what best practice addresses it?
+
+<details> <summary>Show answer</summary> CI/CD pipelines often require credentials to access resources, and hardcoding secrets into scripts or configuration files is a major risk. The best practice is to use secure secrets management tools that control access to sensitive data, log usage, and rotate secrets regularly to prevent unauthorized access. </details>
+
+5. In a fully automated Continuous Deployment environment, what controls should be in place to maintain security without manual approvals?
+
+<details> <summary>Show answer</summary> In Continuous Deployment setups without manual reviews, automated security gates must ensure that only safe, tested code is deployed. This includes automated testing, vulnerability scanning, policy enforcement, and monitoring. Additionally, logging, anomaly detection, and the ability to roll back deployments quickly are essential defenses. </details>
+
+---
 
 
 
