Update 8.2 - Identify and apply security controls in software development ecosystems.md

--- a/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
+++ b/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
@@ -258,8 +258,45 @@ Pipeline security also means thinking about infrastructure as code (IaC). Many d
 
 ---
 
+## 8.2.7 Software configuration management (CM) ##
 
+Software configuration management is one of those behind-the-scenes practices that, if ignored, will silently corrode your security posture from the inside out. It’s not flashy, it doesn’t scream for attention, but if you’ve ever had to deal with a rollback nightmare, or couldn’t tell which version of a script was deployed in production last night, you already know why SCM matters.
 
+:necktie: SCM is the discipline that tracks and controls changes in software, ensuring that every component, every tweak, every configuration has a known origin, a clear purpose, and a trusted state. 
 
+Software configuration management is foundational because security is not just about stopping threats; it’s about knowing what is supposed to be there, so you can recognize when something isn’t. 
 
+The first principle SCM supports is **integrity**. Without a system that tracks and validates changes to code and configurations, malicious or accidental modifications can go undetected. Version control systems like Git, Subversion, or Mercurial are central to this, but SCM goes beyond them. SCM is not just about code – it covers everything: source files, documentation, test scripts, runtime parameters, infrastructure-as-code templates, container specs, API keys, and environment variables. Each one of these artifacts can impact the behavior and security of your application. You must ensure that not only is the code version-controlled, but the configuration settings – such as which ports are open, which IP ranges are whitelisted, or what cryptographic algorithms are used – are under strict configuration control. One forgotten change to a YAML file could disable TLS, or open up an admin interface to the public. These mistakes don’t show up in code reviews – they live in the config, and SCM is your map to that territory.
 
+**Configuration drift** happens when systems or environments slowly diverge from their expected state. This is especially common in cloud deployments, where teams spin up resources dynamically, patch them, tweak them for testing, and forget to reset them. The result? Production no longer matches your approved configuration baseline. An attacker who understands this can exploit forgotten test settings, leftover credentials, or mismatched firewall rules. SCM tools can detect this drift. For example, tools like Puppet, Chef, Ansible, or Terraform don’t just deploy infrastructure – they define the desired state, and regularly compare it to what’s running. If something’s out of place, they flag it or fix it automatically. That’s configuration as code – not just automation, but enforcement of known-good states. When SCM is integrated with these tools, you gain the power to prevent configuration-based vulnerabilities at scale.
+
+Another key concept in SCM is **traceability**. In a secure environment, we don’t just want to know what is running, we want to know who changed it, when, and why. When a breach happens – and let’s be realistic, it will – the first thing the response team needs is a clear change history. If your logs say a config file was modified, but you can’t trace it back to a commit or a change request, you’ve lost forensic visibility. SCM provides that audit trail. Every change is documented, peer-reviewed, signed off, and ideally linked to a ticket in a change management system. In mature organizations, this auditability is baked into the CI/CD pipeline: changes can’t be merged unless they meet policy. This might seem like bureaucracy, but in security, trust comes from verification, and SCM is your chain of custody.
+
+There’s also a **supply chain** angle. With modern applications depending on hundreds of libraries, packages, container images, and third-party services, SCM helps you define and freeze dependencies. When Log4j hit, the teams with proper SCM practices were able to search their codebases and identify impacted systems quickly. Others had no idea which version was running where. SCM supports reproducibility – the ability to rebuild the same artifact with the same behavior at any time. That’s gold during incident response or compliance audits. In regulated industries, it’s not enough to say “*we fixed it*” – you need to prove what was running, who approved it, and how it changed. SCM turns “*we think so*” into “*here’s the record.*”
+Another area to focus on is access control within SCM systems themselves. Git repositories, configuration management platforms, and CI/CD tools must be tightly secured. If an attacker compromises your SCM platform, they own your software supply chain. 
+
+SCM also supports **security testing**. When integrated properly, SCM allows you to run static code analysis, configuration scans, and even container vulnerability scans every time a change is committed. These tests become part of the pipeline, and SCM enforces that code doesn’t move forward unless it passes. This closes the loop between development and security. No longer do you have to rely on end-of-project penetration tests – you’re testing security at every commit, in every environment.
+
+### Open Questions ###
+
+1. Why is software configuration management critical to maintaining integrity in a secure software development lifecycle?
+
+<details> <summary>Show answer</summary> Software configuration management (SCM) ensures that all changes to code and configuration are tracked, verified, and version-controlled. This prevents unauthorized or undocumented modifications, preserving the integrity of both the application and its operating environment and supporting secure, auditable development practices. </details>
+
+2. How does configuration drift pose a security risk, and what role does SCM play in addressing it?
+
+<details> <summary>Show answer</summary> Configuration drift occurs when live systems diverge from their documented and approved configurations, often due to ad hoc changes or manual fixes. This can introduce vulnerabilities or inconsistencies that attackers may exploit. SCM tools detect and correct drift, maintaining consistent, hardened environments and reducing the risk of exploitation. </details>
+
+3. What is the security significance of traceability in software configuration management?
+
+<details> <summary>Show answer</summary> Traceability provides an auditable record of who made each change, when it was made, and why. This is essential for forensic analysis, accountability, compliance in regulated industries, and effective incident response, enabling security teams to quickly identify and address potential breaches. </details>
+
+4. In the context of SCM, why is infrastructure as code considered a best practice for security?
+
+<details> <summary>Show answer</summary> Infrastructure as code (IaC) allows environments to be defined, versioned, and deployed consistently through SCM. This eliminates manual configuration errors, ensures reproducibility, and enables security teams to audit and enforce secure settings across all environments, strengthening overall system security. </details>
+
+5. How can a compromise of the SCM system itself affect the software supply chain, and what CISSP-relevant controls help mitigate this risk?
+
+<details> <summary>Show answer</summary> A compromised SCM platform can allow attackers to inject malicious code or configuration changes into trusted software releases, undermining the entire supply chain, as seen in incidents like SolarWinds. Mitigation controls include strong access controls, multifactor authentication, role-based permissions, and audit logging to secure SCM systems and maintain the integrity of software delivery. </details>
+
+---
